# smart-garden-mvp

./: .gitignore  1  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  test.yml
.trae/agents/: api-sync-checker.md  code-reviewer.md  db-migration.md  test-generator.md
_dev/tools/python/v2/: README.md  pyproject.toml
_dev/tools/python/v2/docs/: DEVELOPMENT_ROADMAP.md
_dev/tools/python/v2/src/: __init__.py  main.py
_dev/tools/python/v2/src/core/: __init__.py  config.py  errors.py  logger.py
_dev/tools/python/v2/src/models/: __init__.py  device.py  sensor_data.py
_dev/tools/python/v2/src/routes/: __init__.py  api.py  websocket.py
_dev/tools/python/v2/src/services/: __init__.py  data_generator.py  data_history.py  device_manager.py  event_queue.py  natural_simulation.py  scenario_engine.py  virtual_time.py
_dev/tools/python/v2/tests/: conftest.py
_dev/tools/python/v2/tests/integration/: test_history_api.py  test_scenario_api.py  test_timeline_api.py
_dev/tools/python/v2/tests/unit/: test_device_manager.py
docs/: README.md
frontend/: .gitignore  app.js  app.json  app.wxss  project.config.json
workspace-20260414-redis-cache/: CI-CD-README.md  README.md  checklist.md  改造方案.md
数据库日志服务工作小组/: 01-一期计划.md  02-接口文档.md
文档重组工作小组/: 1.md  README.md  工作区模式说明.md  迁移验证清单.md
测试工作组/: README.md  change-log.md  checklist.md  coverage-improvement-plan.md  spec.md  tasks.md
静态分析工作小组/: README.md
面向前端的设备页面与虚拟仿真设备对接实现工作小组/: README.md  checklist.md  spec.md  tasks.md  工作流规划.md  开发日志.md  数据库设置指南.md  文档合并迁移计划.md  联调测试报告.md  设备模块与虚拟设备测试工具评估报告.md
(+712 files in other folders)
